--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@actions/core": "^1.10.0",
     "@balazsorban/monorepo-release": "0.1.8",
+    "@docusaurus/eslint-plugin": "2.2.0",
     "@types/jest": "^28.1.3",
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "5.47.0",
